[package]
    name    = "my-jira"
    version = "0.1.0"

    edition = "2021"
    publish = false

[dependencies]
    anyhow               = "1.*"
    pad                  = "0.1.*"
    serde                = { version = "1.*", features = ["derive"] }
    serde_json           = "1.*"
    tempfile             = "3.*"
    unicode-segmentation = "1.*"
